@@ -1,19 +1,58 @@
 from .__version__ import __version__
+from .systray import Icon as TrayIcon
+from .home import Window as Home
 
-import pyglet
-from pystray import Icon, Menu, MenuItem
+import pyglet.app
 from PIL import Image, ImageDraw
 
-import threading
+from threading import Thread
 
 
-def quit():
-    pyglet.app.exit()
-    icon.stop()
+#icon.notify('this is a test', 'lanku alert')
+
+
+class Application:
+    def __init__(self):
+        self.icon = create_image(64, 64, 'green', 'white')
+        self.tray_icon = TrayIcon(self)
+        self.tray = Thread(target=self.tray_icon.run)
+        self.home = Home(self)
+        self.exiting = False
+
+    def run(self):
+        print(f'lanku v{__version__}')
+        try:
+            self.tray.start()
+            self.show_hide()
+            pyglet.app.run()
+
+        except KeyboardInterrupt:
+            pass
+
+        finally:
+            self.quit()
+            self.tray.join()
+
+    def show_hide(self):
+        if self.home.minimized:
+            self.home.set_visible(True)
+
+        else:
+            self.home.set_visible(not self.home.visible)
+            if self.home.visible:
+                self.home.set_location(100, 100)
+
+    def quit(self):
+        if self.exiting: return
+        self.exiting = True
+        print('quit')
+
+        self.tray_icon.stop()
+        pyglet.app.exit()
 
 
 def create_image(width, height, color1, color2):
-    image = Image.new('RGB', (width, height), color1)
+    image = Image.new('RGBA', (width, height), color1)
     dc = ImageDraw.Draw(image)
     dc.rectangle(
         (width // 2, 0, width, height // 2),
@@ -23,47 +62,4 @@ def create_image(width, height, color1, color2):
         fill=color2)
 
     return image
-
-
-icon = Icon(
-    'lanku',
-    icon=create_image(64, 64, 'green', 'white'),
-    menu=Menu(
-        MenuItem(
-            'With submenu',
-            Menu(
-                MenuItem(
-                    'Submenu item 1',
-                    lambda icon, item: 1),
-                MenuItem(
-                    'Submenu item 2',
-                    lambda icon, item: 2))),
-        MenuItem('Quit', quit)))
-#icon.run_detached()
-tray = threading.Thread(target=icon.run)
-tray.start()
-
-print('hello?')
-
-
-class Main(pyglet.window.Window):
-    def __init__(self):
-        super().__init__()
-
-        image = create_image(32, 32, 'green', 'red')
-        self.set_icon(pyglet.image.ImageData(image.width, image.height, 'RGB',
-            image.tobytes(), pitch=-image.width*3))
-
-        self.label = pyglet.text.Label('Hello, world!')
-
-    def run(self):
-        pyglet.app.run()
-
-    def on_draw(self):
-        self.clear()
-        self.label.draw()
-
-    def on_close(self):
-        icon.stop()
-        super().on_close()
 
