@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
 @%@~LICENSE:MIT~@%@
 
+saw_061722_3 - Improved window behavior and organization.
+
 saw_061722_2 - Testing pyglet with pystray.
 
 saw_061722_1 - Just getting started.
